syntax = "proto3";

package noorsignal;

option go_package = "github.com/noorfinances-eng/noorchain-core/x/noorsignal/types";

import "google/protobuf/timestamp.proto";

// Signal représente un signal social PoSS émis sur NOORCHAIN.
message Signal {
  uint64 id = 1;
  bytes participant = 2;
  bytes curator = 3;
  uint32 weight = 4;
  google.protobuf.Timestamp time = 5;
  string metadata = 6;

  uint64 total_reward = 7;
  uint64 reward_participant = 8;
  uint64 reward_curator = 9;
}

// Curator représente un validateur de signaux PoSS (Curator NOOR).
message Curator {
  bytes address = 1;
  string level = 2;
  uint64 total_signals_validated = 3;
  bool active = 4;
}

// PossConfig contient la configuration globale du système PoSS.
message PossConfig {
  uint64 base_reward = 1;
  uint32 participant_share = 2;
  uint32 curator_share = 3;
  uint32 max_signals_per_day = 4;
  bool enabled = 5;
  uint32 era_index = 6;
}

// GenesisState représente l'état initial du module noorsignal.
message GenesisState {
  PossConfig config = 1;
  repeated Signal signals = 2;
  repeated Curator curators = 3;
}
