syntax = "proto3";

package noorsignal;

option go_package = "github.com/noorfinances-eng/noorchain-core/x/noorsignal/types";

import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/msg/v1/msg.proto";

// PoSS Signal types for NOORCHAIN.
// These values MUST stay aligned with the Go type:
//   type SignalType string
//   const (
//     SignalTypeMicroDonation = "micro_donation"
//     SignalTypeParticipation = "participation"
//     SignalTypeContent       = "content"
//     SignalTypeCCN           = "ccn"
//   )
enum SignalType {
  SIGNAL_TYPE_UNSPECIFIED   = 0;
  SIGNAL_TYPE_MICRO_DONATION = 1;
  SIGNAL_TYPE_PARTICIPATION  = 2;
  SIGNAL_TYPE_CONTENT        = 3;
  SIGNAL_TYPE_CCN            = 4;
}

// MsgCreateSignal is the main PoSS entry point.
// It represents a single social signal (micro-donation, participation,
// content, CCN...) emitted by a participant and optionally validated
// by a curator.
message MsgCreateSignal {
  option (cosmos.msg.v1.signer) = "participant";

  // Participant address (NOOR bech32: noor1...).
  // This is the main signer of the transaction.
  string participant = 1;

  // Curator address (NOOR bech32: noor1...).
  // Receives the 30% share of the PoSS reward if applicable.
  string curator = 2;

  // Type of the PoSS signal (micro_donation, participation, content, CCN).
  SignalType signal_type = 3;

  // Optional metadata for this signal (URI, hash, short description, etc.).
  string metadata = 4;

  // Optional timestamp, usually filled by the client.
  // The chain will still use its own block time for final accounting.
  google.protobuf.Timestamp timestamp = 5;

  // Logical PoSS date in ISO 8601 "YYYY-MM-DD" format.
  // This is used to update daily counters (MaxSignalsPerDay, etc.).
  string date = 6;
}

// MsgCreateSignalResponse returns the *theoretical* PoSS rewards
// computed by the module for this signal.
//
// IMPORTANT:
// - At the current implementation stage, NOORCHAIN does NOT mint or
//   transfer these coins yet.
// - They are returned for transparency and for off-chain analytics.
// - The real minting / transfers will be implemented later, once
//   the PoSS reserve and Legal Light / governance are fully wired.
message MsgCreateSignalResponse {
  cosmos.base.v1beta1.Coin participant_reward = 1;
  cosmos.base.v1beta1.Coin curator_reward     = 2;
}

// Msg defines the PoSS Msg service for NOORCHAIN.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // CreateSignal emits a PoSS signal into the chain.
  //
  // The module will:
  // - compute the theoretical 70/30 rewards for participant / curator,
  // - increment the participant's daily counter for the given date,
  // - record a PendingMint entry for later processing,
  // - update PoSS global totals (TotalSignals / TotalMinted),
  // - return the computed rewards in the response.
  //
  // If PoSSEnabled = false in Params, rewards will be 0 / 0 but
  // the signal is still recorded and counters updated.
  rpc CreateSignal(MsgCreateSignal) returns (MsgCreateSignalResponse);
}
